--- a/src/app/components/dice/dice.html
+++ b/src/app/components/dice/dice.html
@@ -1,5 +1,5 @@
 <div>
-    <md-button class="md-raised md-primary" ng-click="vm.rollDice()" ng-disabled="!vm.canRoll">Roll!</md-button>
+    <md-button type="button" class="md-raised md-primary" ng-click="vm.rollDice()" ng-disabled="!vm.canRoll">Roll!</md-button>
     <div class="dice">
         <span ng-repeat="die in vm.dice track by $index">
             {{ die }}
