--- a/src/app/components/notification/notification-template.html
+++ b/src/app/components/notification/notification-template.html
@@ -1,6 +1,6 @@
 <md-toast>
-    <span flex>{{ message }}</span>
-    <md-button ng-click="closeToast()">
+    <span flex>{{ vm.message }}</span>
+    <md-button ng-click="vm.closeToast()">
         Close
     </md-button>
 </md-toast>
