--- a/src/app/components/dice/dice.html
+++ b/src/app/components/dice/dice.html
@@ -2,7 +2,7 @@
     <md-button type="button" class="md-raised md-primary" ng-click="vm.rollDice()" ng-disabled="!vm.canRoll">Roll!</md-button>
     <div class="dice">
         <span ng-repeat="die in vm.dice track by $index">
-            {{ die }}
+        <md-button type="button" class="md-button-sm" ng-click="die.isLocked = !die.isLocked" ng-class="{ 'disabled': die.isLocked }">{{ die.value }}</md-button>
         </span>
     </div>
 </div>
