--- a/src/app/about/about.html
+++ b/src/app/about/about.html
@@ -19,12 +19,12 @@
         </div>
         <div layout="row" layout-wrap>
             <div flex="50" flex-offset="25">
-                <table class="text-left">
+                <table class="text-left table-xs">
                     <thead>
                         <tr>
-                            <th width="10%">Combination</th>
-                            <th width="85%">Result</th>
-                            <th></th>
+                            <th width="40">Combination</th>
+                            <th width="50">Result</th>
+                            <th width="10"></th>
                         </tr>
                     </thead>
                     <tbody>
@@ -32,7 +32,7 @@
                             <td>{{ result.label }}</td>
                             <td ng-class="{ 'disabled': result.isLocked }">{{ result.value }}</td>
                             <td>
-                                <md-button ng-disabled="result.isLocked" ng-click="vm.saveResult( result )" type="button" class="md-flat"><md-icon>check</md-icon></md-button>
+                                <md-button ng-disabled="result.isLocked" ng-click="vm.saveResult( result )" type="button" class="md-flat md-button-sm"><md-icon>check</md-icon></md-button>
                             </td>
                         </tr>
                     </tbody>
