--- a/src/app/index.css
+++ b/src/app/index.css
@@ -66,8 +66,19 @@ section.jumbotron h1 {
     width: 100px;
 }
 
+table {
+    border-collapse: collapse;
+}
+.table-xs {
+    width: 300px;
+}
 table td, table th {
     padding: 0 10px;
+}
+table .md-button {
+    line-height: 2;
+    margin-top: 3px;
+    margin-bottom: 3px;
 }
 .text-left {
     text-align: left;
