--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -1,13 +1,7 @@
 <md-toolbar layout="row" layout-align="center center">
-
-  <md-button href="https://github.com/Swiip/generator-gulp-angular">Gulp Angular</md-button>
-
-  <section flex layout="row" layout-align="left center">
-    <md-button href="#" class="md-raised">Home</md-button>
-    <md-button ui-sref="about" ui-sref-opts="{reload: true}" class="md-raised">About</md-button>
-    <md-button href="#" class="md-raised">Contact</md-button>
-  </section>
-
-  <md-button class="acme-navbar-text">Application was created {{ vm.relativeDate }}.</md-button>
-
+    <md-button href="#">Dices</md-button>
+    <section flex layout="row" layout-align="left center">
+        <md-button ui-sref="game" ui-sref-opts="{reload: true}" class="md-raised">Play!</md-button>
+    </section>
+    <md-button class="acme-navbar-text">Application was created {{ vm.relativeDate }}.</md-button>
 </md-toolbar>
