--- a/src/app/components/board/board.html
+++ b/src/app/components/board/board.html
@@ -2,7 +2,7 @@
     <thead>
         <tr>
             <th width="40">Combination</th>
-            <th width="50">Result</th>
+            <th width="50">{{ vm.currentPlayer.name }}</th>
             <th width="10"></th>
         </tr>
     </thead>
