--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -7,7 +7,7 @@
             <yatzy-sign></yatzy-sign>
             <p class="lead">
                 <img id="dice-logo" src="assets/images/dice-logo.svg" alt="Pair of dice">
-                <br> 'Cause it was cheaper to write the game than buying 5 dice, piece of paper and a pen
+                <br> 'Cause it was cheaper to write the game than buying 5 dice, piece of paper and a pen!
             </p>
             <p>
                 With ♥ thanks to the contributions of
