--- a/src/app/game/game.html
+++ b/src/app/game/game.html
@@ -1,7 +1,7 @@
 <div layout="vertical" layout-fill layout="row">
     <md-content flex="100">
         <header style="margin-bottom: 25px;">
-            <acme-navbar current-player="vm.currentPlayer" creation-date="vm.creationDate"></acme-navbar>
+            <acme-navbar creation-date="vm.creationDate"></acme-navbar>
         </header>
         <div layout="row" layout-wrap>
             <board flex="25" current-player="vm.currentPlayer"></board>
