refactor: Reorganize folder structure. Clean up code

--- a/src/app/components/appRoot/appRoot.html
+++ b/src/app/components/appRoot/appRoot.html
@@ -1,7 +1,7 @@
 <div layout="vertical" layout-fill>
     <md-content class="bg-primary">
         <header>
-            <acme-navbar creation-date="main.creationDate"></acme-navbar>
+            <navbar creation-date="vm.creationDate"></navbar>
         </header>
         <section class="jumbotron">
             <yatzy-sign></yatzy-sign>
@@ -10,8 +10,7 @@
                 <br> 'Cause it was cheaper to write the game than buying 5 dice, piece of paper and a pen!
             </p>
             <p>
-                With ♥ thanks to the contributions of
-                <acme-malarkey extra-values="['Yeoman', 'Gulp', 'Angular']"></acme-malarkey>
+                With ♥ rkunev
             </p>
         </section>
     </md-content>
