--- a/src/app/components/game/game.html
+++ b/src/app/components/game/game.html
@@ -1,13 +1,8 @@
 <div layout="vertical" layout-fill layout="row">
-    <md-content flex="100">
-        <header style="margin-bottom: 25px;">
+    <md-content>
+        <header>
             <navbar creation-date="vm.creationDate"></navbar>
         </header>
-        <div layout="row" layout-wrap>
-            <board flex="25" current-player="vm.currentPlayer"></board>
-            <div layout-align="end center" flex="33">
-                <dice></dice>
-            </div>
-        </div>
+        <div class="main-content" ui-view></div>
     </md-content>
 </div>
