--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -1,25 +1,23 @@
-<div>
-    <md-toolbar layout="row" layout-align="center center">
-        <md-button href="#">Dices</md-button>
-        <section flex layout="row" layout-align="left center">
-            <md-button ui-sref="game" ui-sref-opts="{reload: true}" class="md-raised">Play!</md-button>
-        </section>
-        Hi, {{ vm.currentPlayer.name }}
-        <md-button ng-click="vm.toggleSidenav( 'right' )" class="md-icon-button" aria-label="Settings">
-            <md-icon>more_vert</md-icon>
-        </md-button>
+<md-toolbar layout="row" layout-align="center center">
+    <md-button href="#">Dices</md-button>
+    <section flex layout="row" layout-align="left center">
+        <md-button ui-sref="game.new" ui-sref-opts="{reload: true}" class="md-raised">New Game</md-button>
+    </section>
+    Hi, {{ vm.currentPlayer.name }}
+    <md-button ng-click="vm.toggleSidenav( 'right' )" class="md-icon-button" aria-label="Settings">
+        <md-icon>more_vert</md-icon>
+    </md-button>
+</md-toolbar>
+<md-sidenav md-component-id="right" class="md-sidenav-right md-whiteframe-z2">
+    <md-toolbar class="md-theme-light">
+        <h1 class="md-toolbar-tools">Settings</h1>
     </md-toolbar>
-    <md-sidenav md-component-id="right" class="md-sidenav-right md-whiteframe-z2">
-        <md-toolbar class="md-theme-light">
-            <h1 class="md-toolbar-tools">Settings</h1>
-        </md-toolbar>
-        <form name="playerForm" ng-submit="vm.saveCurrentPlayer()">
-            <md-input-container>
-                <label for="currentPlayer">What's your name?</label>
-                <input id="currentPlayer" type="text" ng-model="vm.currentPlayer.name" md-autofocus>
-            </md-input-container>
-            <md-button type="button" class="md-raised md-primary" ng-click="vm.saveCurrentPlayer()">Use this name</md-button>
-        </form>
-        <md-button type="button" class="md-raised md-primary" ng-click="vm.toggleSidenav( 'right' )">I'm done</md-button>
-    </md-sidenav>
-</div>
+    <form name="playerForm" ng-submit="vm.saveCurrentPlayer()">
+        <md-input-container>
+            <label for="currentPlayer">What's your name?</label>
+            <input id="currentPlayer" type="text" ng-model="vm.currentPlayer.name" md-autofocus>
+        </md-input-container>
+        <md-button type="button" class="md-raised md-primary" ng-click="vm.saveCurrentPlayer()">Use this name</md-button>
+    </form>
+    <md-button type="button" class="md-raised md-primary" ng-click="vm.toggleSidenav( 'right' )">I'm done</md-button>
+</md-sidenav>
